kubernetes/scramblr.yml
apiVersion: v1
kind: Namespace
metadata:
    name: scramblr

---
apiVersion: v1
kind: Service
metadata:
    name: scramblr
    namespace: scramblr
    labels:
        app: scramblr
spec:
    ports:
        - port: 8080
          targetPort: 8080
          protocol: TCP
    selector:
        app: scramblr

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: scramblr
    namespace: scramblr
    labels:
        app: scramblr
spec:
    replicas: 1
    selector:
        matchLabels:
            app: scramblr
    template:
        metadata:
            labels:
                app: scramblr
        spec:
            containers:
                - name: scramblr
                  image: florianherrengt/scramblr:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/issuer: 'letsencrypt'
    name: scramblr
    namespace: scramblr
spec:
    tls:
        - hosts:
              - scramblrapp.com
          secretName: scramblr-tls
    rules:
        - host: scramblrapp.com
          http:
              paths:
                  - backend:
                        serviceName: scramblr
                        servicePort: 8080
                    path: /
